Adding notebooks - Chapter 6

--- a/carregando pequenas quantidades de dados na memoria.ipynb
+++ b/carregando pequenas quantidades de dados na memoria.ipynb
@@ -10,9 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a6f078bc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
